docker/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: CI_PROJECT_NAME-svc
spec:
  selector:
    app: CI_PROJECT_NAME
  ports:
    - port: HTTP_PORT
      name: pHTTP_PORT
  type: NodePort
